Changelog
=========

0.3 (unreleased)
----------------

- Fix selected Group logic on search form.
  [davidjb]
- Clarify description for group selection field.
  [davidjb]
- Minor grammar update for column headings on search page and export.
  [davidjb]
- Change icon URLs to use PNG format rather than deprecated GIF images.
  [davidjb]


0.2 (2013-04-18)
----------------

First public release

* old code totally refactored (removed ``sqldict`` for a pure ``SQLAlchemy`` approach)
  [keul]
* i18n support
  [keul]

0.1 (unreleased)
----------------

- Initial release